--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "echo 'Build completed'",
     "vercel-build": "echo 'Vercel build completed'",
     "init-db": "node init-database.js",
-    "postinstall": "node init-database.js"
+    "postinstall": "node init-database.js",
+    "check-env": "node cloudtype-env-check.js"
   },
   "dependencies": {
     "express": "^4.18.2",
