--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'Build completed'",
+    "build": "echo 'CloudType build completed'",
     "vercel-build": "echo 'Vercel build completed'",
+    "cloudtype-build": "echo 'CloudType build completed'",
     "init-db": "node init-database.js",
     "postinstall": "node init-database.js",
     "check-env": "node cloudtype-env-check.js",
