CloudType 빌드 오류 해결 완료
- 빌드 스크립트 수정 (npm ci  npm install --omit=dev)
- postinstall 스크립트 수정 (데이터베이스 초기화 제거)
- CloudType 배포 설정 파일 생성 (cloudtype.yaml)
- CloudType용 Dockerfile 생성 (Dockerfile.cloudtype)
- .gitignore 파일 생성 (node_modules 제외)
- 로컬 빌드 테스트 성공
- CloudType 배포 오류 해결

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'CloudType build completed'",
+    "build": "npm install --omit=dev && echo 'CloudType build completed'",
     "vercel-build": "echo 'Vercel build completed'",
-    "cloudtype-build": "echo 'CloudType build completed'",
+    "cloudtype-build": "npm install --omit=dev && echo 'CloudType build completed'",
     "init-db": "node init-database.js",
-    "postinstall": "node init-database.js",
+    "postinstall": "echo 'Postinstall completed'",
     "check-env": "node cloudtype-env-check.js",
     "debug-chat": "node debug-realtime-chat.js"
   },
