Admin 로그인 문제 해결
- admin123 비밀번호 해시 수정
- database_schema.sql 업데이트
- init-database.js 업데이트
- update-admin-password.js 스크립트 생성
- package.json에 update-admin 스크립트 추가
- admin/admin123 로그인 가능하도록 수정

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vercel-build": "echo 'Vercel build completed'",
     "cloudtype-build": "npm install --omit=dev && echo 'CloudType build completed'",
     "init-db": "node init-database.js",
+    "update-admin": "node update-admin-password.js",
     "postinstall": "echo 'Postinstall completed'",
     "check-env": "node cloudtype-env-check.js",
     "debug-chat": "node debug-realtime-chat.js"
